messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: messaging.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: messaging-app-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: messaging-app-service
                port:
                  number: 80
